# knowledgepitt

./: LICENSE  main.py  pyproject.toml
config/: common_config.py
src/: app.py
src/Document/: document_handler.py
src/JobSystem/: job_manager.py
src/LLM/Gemini/: Gemini.py  GeminiWrapper.py
src/LLM/Groq/: Groq.py  GroqWrapper.py
src/LightRag/: rag_handler.py
src/utils/: Logger.py  Singleton.py  schemas.py
